--- a/WhereVimto/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/WhereVimto/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -84,7 +84,7 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize.Cube",
-                "value": "{\"m_Value\":{\"x\":0.5,\"y\":4.5,\"z\":1.0}}"
+                "value": "{\"m_Value\":{\"x\":-1.0000001192092896,\"y\":13.000003814697266,\"z\":0.5}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
