added the back wall/stragger

--- a/WhereVimto/ProjectSettings/Packages/com.unity.probuilder/Settings.json
+++ b/WhereVimto/ProjectSettings/Packages/com.unity.probuilder/Settings.json
@@ -84,7 +84,7 @@
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
                 "key": "ShapeBuilder.LastSize.Cube",
-                "value": "{\"m_Value\":{\"x\":-1.0000001192092896,\"y\":13.000003814697266,\"z\":0.5}}"
+                "value": "{\"m_Value\":{\"x\":-4.423168182373047,\"y\":15.270527839660645,\"z\":-0.8700580596923828}}"
             },
             {
                 "type": "UnityEngine.Vector3, UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null",
